--- a/commit3.html
+++ b/commit3.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <body>
-<marquee>welcome to accenture </marquee>
+<marquee>welcome to Telstara </marquee>
 </body>
 </head>
 </html>
